--- a/src/assets/scss/_menu.scss
+++ b/src/assets/scss/_menu.scss
@@ -12,7 +12,7 @@
 
 .navbar {
   transition: all 0.5s ease;
-  padding: 20px 0px;
+  padding: 0;
   .navbar-nav {
     .nav-item {
       .nav-link {
@@ -21,7 +21,7 @@
         font-weight: 600;
         background-color: transparent;
         margin: 0 10px;
-        padding: 6px 0;
+        padding: 0;
         transition: all 0.3s ease;
         &:hover,
         &:active,
