Avant derniere modification avant mise en ligne du site, avec ajout de la page entreprise

--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -96,7 +96,7 @@
 .bg-home3 {
   padding: 210px 0px 180px 0px;
   .bg-overlay {
-    background-color: rgba(#173439, 0.85);
+    background-color: rgba($audaciablue, 0.85);
   }
 }
 #myVideo {
