ajustement taille logo mfr et padding left

--- a/src/assets/scss/theme.scss
+++ b/src/assets/scss/theme.scss
@@ -166,3 +166,9 @@
 .logoAccueil {
   padding-top: 10px;
 }
+
+// ------ Page entreprise
+
+.entreprise__logomfr {
+  padding-left: 0 !important;
+}
